--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "node-fetch": "^1.7.3",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "urlencode": "^1.1.0"
   }
 }
